# Hack-1

./: README.md  api.md  docker-compose.yml  needs.py  package-lock.json  render.yaml  requirements.txt  run_local.py
eng-memory-os/backend/: README.md  alembic.ini  pyproject.toml  pytest.ini.toml  railway.toml  requirements-dev.txt  requirements.txt
eng-memory-os/backend/alembic/: env.py
eng-memory-os/backend/alembic/versions/: 20260701_1056_09e1fa9b78eb_initial_schema.py
eng-memory-os/backend/src/eng_memory_os/: __init__.py
eng-memory-os/backend/src/eng_memory_os/application/: __init__.py
eng-memory-os/backend/src/eng_memory_os/application/event_handlers/: __init__.py  handlers.py
eng-memory-os/backend/src/eng_memory_os/application/knowledge/: __init__.py  extract_entities.py  optimize_graph.py
eng-memory-os/backend/src/eng_memory_os/application/memory/: __init__.py  decay_memory.py  ingest_memory.py  query_memory.py
eng-memory-os/backend/src/eng_memory_os/application/pipelines/: __init__.py  memory_pipeline.py
eng-memory-os/backend/src/eng_memory_os/cmd/: __init__.py  api_server.py  config.py  worker.py
eng-memory-os/backend/src/eng_memory_os/domain/: __init__.py
eng-memory-os/backend/src/eng_memory_os/domain/agent/: __init__.py  entities.py  events.py
eng-memory-os/backend/src/eng_memory_os/domain/gateway/: __init__.py  entities.py  events.py  interfaces.py
eng-memory-os/backend/src/eng_memory_os/domain/integration/: __init__.py  interfaces.py
eng-memory-os/backend/src/eng_memory_os/domain/knowledge/: __init__.py  entities.py  events.py  repositories.py  value_objects.py
eng-memory-os/backend/src/eng_memory_os/domain/memory/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
eng-memory-os/backend/src/eng_memory_os/domain/shared/: __init__.py  errors.py  events.py  types.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/: __init__.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/cognee/: __init__.py  cognee_adapter.py  entity_extractor.py  graph_optimizer.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/db/: __init__.py  connection.py  models.py  postgres_query_log_repository.py  postgres_repository.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/event_bus/: __init__.py  in_memory_bus.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/integration/: __init__.py  github_adapter.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/langgraph/: __init__.py  evidence_ranker.py  graph_builder.py  state.py
eng-memory-os/backend/src/eng_memory_os/infrastructure/llm/: __init__.py  circuit_breaker.py  gateway.py  token_tracker.py
eng-memory-os/backend/src/eng_memory_os/presentation/: __init__.py  dependencies.py  schemas.py
eng-memory-os/backend/src/eng_memory_os/presentation/middleware/: __init__.py  cors_middleware.py  (+1 more)
eng-memory-os/backend/tests/: conftest.py
eng-memory-os/backend/tests/unit/application/: test_ingest_memory.py  test_memory_pipeline.py
eng-memory-os/backend/tests/unit/domain/: test_memory_entity.py  test_value_objects.py
eng-memory-os/backend/tests/unit/infrastructure/: test_evidence_ranker.py  test_github_adapter.py
(+51 files in other folders)
