[project]
name = "eng-memory-os"
version = "0.1.0"
description = "AI-powered engineering knowledge operating system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Engineering Memory OS Team" },
]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # --- Vector Database ---
    "qdrant-client[fastembed]>=1.18.0",

    # --- Knowledge Graph (Cognee) ---
    "cognee>=1.0.0",

    # --- Agent Framework ---
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # --- LLM Providers ---
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "httpx>=0.27.0",

    # --- Auth & Security ---
    "pyjwt[crypto]>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",

    # --- Observability ---
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4.0",

    # --- Utilities ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "testcontainers[postgres,qdrant]>=4.8.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eng_memory_os"]

# ===========================
# Ruff (Linter & Formatter)
# ===========================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["eng_memory_os"]

# ===========================
# Pyright (Type Checker)
# ===========================
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["tests"]

# ===========================
# Pytest
# ===========================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires Docker services)",
    "e2e: End-to-end tests",
]
